# embedded-widget

./: Cargo.toml  LICENSE  README.md
examples/: card.rs  measurment.rs  measurment_card.rs
src/: card.rs  lib.rs  measurment.rs
