[package]
name = "widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-text = "0.5.0"
u8g2-fonts = { version = "0.2.0", features = ["embedded_graphics_textstyle"] }

[dev-dependencies]
embedded-graphics-simulator = "0.4.0"


[[example]]
name = "card"

[[example]]
name = "measurment"

[[example]]
name = "measurment_card"
